<resources>
    <string name="app_name" translatable="false">The Witcher\'s Codex</string>
    <string name="client_id" translatable="false">702743678592-rq20is8gi2pojcu90bmg5tkhk9rv2ffg.apps.googleusercontent.com</string>
    <string name="login_subtitle"><![CDATA[Discover the Secrets of The Witcher World]]></string>
    <string name="login_sign_in">Don\'t have an account yet? Check in</string>
    <string name="login_button_loggin">LOGIN</string>
    <string name="login_hint_password">Password</string>
    <string name="login_hint_user">Username or password</string>
    <string name="login_error_mail">Invalid email</string>
    <string name="login_error_password">Must contain at least 6 characters</string>
    <string name="login_footer_unselected">Don\'t have an account yet?</string>
    <string name="login_footer_selected">Sign In</string>
    <string name="login_error_dialog_title">We have not found the user</string>
    <string name="login_error_dialog_body">Please check the data or try again</string>
    <string name="login_error_dialog_negative_action">Cancel</string>
    <string name="login_error_dialog_positive_action">Retry</string>
    <string name="watching_count"> %1$s watching</string>

    <string name="introduction_button_signin">Create Account</string>
    <string name="location_placeholder">Location: %s</string>
    <string name="loot_placeholder">Loot: %s</string>
    <string name="weakness_placeholder">Weakness: %s</string>
    <string name="signin_form_real_name">Full name</string>
    <string name="signin_form_nickname">Username</string>
    <string name="signin_form_email">Email</string>
    <string name="signin_form_password">Password</string>
    <string name="signin_form_repeat_password">Repeat Password</string>
    <string name="signin_error_mail">Invalid email</string>
    <string name="signin_error_nickname">Must contain at least 6 characters</string>
    <string name="signin_error_realname">Must contain at least 6 characters</string>
    <string name="signin_error_password">The 2 passwords must be the same</string>
    <string name="signin_footer_unselected">Do you already have an account?</string>
    <string name="signin_footer_selected">Login</string>
    <string name="signin_error_dialog_title">An error has occurred</string>
    <string name="signin_error_dialog_body">We were unable to create your account, please try again later</string>
    <string name="signin_error_dialog_positive_action">Okey :(</string>

    <string name="verification_button_go_to_nuwe">Go Hunting</string>
    <string name="verification_check_mail">To access the application, verify your email (remember to look in SPAM).</string>

    <string name="dialog_success_positive">Thanks!</string>

    <string name="signin_button_createaccount">Create an account</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="search_text">Search…</string>
    <string name="bestiary">Bestiary</string>
    <string name="weapons">Weapons</string>
    <string name="characters">Characters</string>
    <string name="fun_facts" translatable="false">Fun Facts</string>
    <string name="fun_facts_description">Discover fascinating facts about the world of The Witcher game series</string>
    <string name="trending">Trending</string>
    <string name="view_all">View All</string>
    <string name="bestiary_Card">Popular Beasts</string>
    <string name="ver_detalle">See detail</string>
    <string name="username_placeholder">Username</string>
    <string name="full_name">Full Name</string>
    <string name="update">Update Fields</string>
    <string name="log_out">Log out</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_confirmation_negative">I changed my mind</string>
    <string name="logout_confirmation_title">Do you want to log out?</string>
    <string name="logout_confirmation_message">We will miss you :(</string>
    <string name="add_monster">Add Monster</string>
    <string name="stream_image">Stream Image</string>
    <string name="guides">Guides</string>
    <string name="go_to_dashboard">Go to Dashboard</string>
    <string name="streams">Streams</string>
    <string name="maps">Maps</string>
    <string name="fun_fact_image">Fun Fact Image</string>
    <string name="add_fun_fact">Add Fun Fact</string>
    <string name="add_a_monster_image_bruh">Add a monster image bruh</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="dialog_success_title">¡Great!</string>
    <string name="dialog_success_body">You\'ve successfully log in</string>
    <string name="select_image">Select Image</string>
    <string name="send">Send</string>
    <string name="entry_name">Entry Name</string>
    <string name="entry_description">Entry description</string>
    <string name="entry_location">Entry location</string>
    <string name="entry_type">Entry type</string>
    <string name="entry_weakness">Entry weakness</string>
    <string name="entry_loot">Entry Loot</string>
    <string name="create_monster">Create Monster</string>
    <string name="create_monster_error_dialog_title">Error</string>
    <string name="create_monster_error_dialog_description">An unexpected error has ocurred. Try again later</string>
    <string name="entry_created_confirmation_title">Entry created</string>
    <string name="delete_entry">Delete Entry</string>
    <string name="edit_entry">Edit Entry</string>
    <string name="entry_update_confirmation_title">Entry Updated</string>
    <string name="edit_entry_confirmation_title">Are you sure you want to delete this entry?</string>
    <string name="edit_entry_confirmation_message">There is no restoration option</string>
    <string name="entry_delete_confirmation_title">Entry deleted</string>
    <string name="update_monster">Update Monster</string>
    <string name="create_character">Create Character</string>
    <string name="character_name">Character Name</string>
    <string name="alias">Alias</string>
    <string name="hair_color">Hair Color</string>
    <string name="eye_color">Eye Color</string>
    <string name="skin">Skin</string>
    <string name="race">Race</string>
    <string name="gender">Gender</string>
    <string name="Nationality">Nationality</string>
    <string name="born">Born</string>
    <string name="character_description">Character Description</string>
    <string name="basic_information">Basic Information</string>
    <string name="personal_information">Personal Information</string>
    <string name="update_character">Update Character</string>
    <string name="create_weapon">Create Weapon</string>
    <string name="weapon_name">Weapon Name</string>
    <string name="weapon_base_damage">Weapon Base Damage</string>
    <string name="weapon_bonuses">Bonuses</string>
    <string name="crafting_req">Crafting Requirements</string>
    <string name="update_weapon">Update Weapon</string>
    <string-array name="types_array">
        <item>Beasts</item>
        <item>Cursed Ones</item>
        <item>Draconids</item>
        <item>Elementa</item>
        <item>Hybrids</item>
        <item>Insectoids</item>
        <item>Necrophages</item>
        <item>Ogroids</item>
        <item>Relicts</item>
        <item>Specters</item>
        <item>Vampires</item>
    </string-array>
</resources>