<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/navigation_guide"
        android:icon="@drawable/guide"
        android:title="@string/guides"
        app:cnb_backgroundColor="@color/blue"
        app:cnb_iconColor="@color/white" />

    <item
        android:id="@+id/navigation_streams"
        android:icon="@drawable/streams"
        android:title="@string/streams"
        app:cnb_backgroundColor="@color/blue"
        app:cnb_iconColor="@color/white" />

    <item
        android:id="@+id/navigation_home"
        android:title="@string/go_to_dashboard"
        android:icon="@drawable/home"
        android:contentDescription="@string/go_to_dashboard"
        app:cnb_backgroundColor="@color/blue"
        app:cnb_iconColor="@color/white"
        android:enabled="true"
        />

    <item
        android:id="@+id/navigation_maps"
        android:icon="@drawable/maps"
        android:title="@string/maps"
        app:cnb_backgroundColor="@color/blue"
        app:cnb_iconColor="@color/white" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_2_24"
        android:title="@string/title_profile"
        app:cnb_backgroundColor="@color/blue"
        app:cnb_iconColor="@color/white" />

</menu>