<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/paper"
    android:padding="16dp"
    tools:context=".ui.weapons.CreateWeaponFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_min_padding"
            android:fontFamily="@font/opensans_extrabold"
            android:text="@string/create_weapon"
            android:textAlignment="center"
            android:textColor="@color/secondary"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutName"
            style="@style/FormTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weapon_name"

            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextName"
                style="@style/FormEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/secondary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutBaseDamage"
            style="@style/FormTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weapon_base_damage"
            android:textColorHint="@color/secondary"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextBaseDamage"
                style="@style/FormEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/secondary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutBonuses"
            style="@style/FormTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weapon_bonuses"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextBonuses"
                style="@style/FormEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/secondary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutCraftingReq"
            style="@style/FormTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/crafting_req"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextCraftingReq"
                style="@style/FormEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/secondary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnChooseImage"
            style="@style/SecondaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_min_padding"
            android:text="@string/select_image" />

        <ImageView
            android:id="@+id/imagePreview"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/bestiary"
            android:scaleType="centerCrop"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            style="@style/AccentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send" />
    </LinearLayout>
</ScrollView>
