<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/paper"
    tools:context=".ui.bestiary.CreateMonsterFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/monster_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@color/primary"
                android:contentDescription="@string/bestiary"
                tools:src="@drawable/placeholder_2" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/FormTextInputLayout"
                app:boxBackgroundColor="@color/accent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_min_padding"
                android:hint="@string/name"

                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/guide">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/FormEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/FormTextInputLayout"
                android:background="@color/accent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_min_padding"
                android:hint="@string/type"
                android:textColorHint="@color/secondary"
                android:theme="@style/Widget.AppCompat.DropDownItem.Spinner"
                app:hintTextColor="@color/secondary"
                app:startIconDrawable="@drawable/guide">

                <Spinner
                    android:prompt="@string/type"
                    android:id="@+id/types_spinner"
                    android:background="@color/accent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/CTA"
        android:contentDescription="@string/add_a_monster_image_bruh"
        android:src="@drawable/baseline_photo_camera_24"
        android:tint="@color/white"
        app:layout_anchor="@id/monster_image"
        app:layout_anchorGravity="bottom|right|end" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>